# flutter_image_quant

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  image_quant_ffi.c
android/app/src/main/kotlin/com/example/image_picker3/: MainActivity.kt
lib/: main.dart
lib/ffi/imagequant-sys/: libimagequant.dart
lib/src/: bindings.dart
native_libs/libimagequant/: CMakeLists.txt
native_libs/libimagequant/src/: hist.h
